--- a/navigation/contact.html
+++ b/navigation/contact.html
@@ -3,10 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="monimage.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
+    <title>Contact - Grues et autres volatiles</title>
 </head>
 <body>
-    <h1>Contact</h1>
-    
+    <header>
+        <!-- On fait un div contenant notre div img et notre div nav, il faut autant de boîtes div que possible.-->
+        <!-- J'indique dans le tag div la classe nommée hautDePage" que j'ai créé
+        dans mon css-->
+        <div>
+            <nav class="desktopMenu">
+                <ul class="desktopList">
+                    <!-- L'unité "em" est adaptatiave sur toutes les plateformes (mobile, desktop) comparée à la valeur "px"-->
+                    <!-- On ne met pas de style="width:20em" à notre image, on le fera sur du CSS, pas sur du HTML-->
+                    <li><a href="#" target="_blank"><img class="logo" src="monimage.png" alt="Logo du site"></a></li>
+                    <!-- href="#" tout seul signifie que l'on est redirigé vers la même page-->
+                    <li><button type="button" class="topButton"><a href="#" target="_blank">Accueil</a></button></li>
+                    <li><button type="button" class="topButton"><a href="navigation/service.html" target="_blank">Service</a></button></li>
+                    <li><button type="button" class="topButton"><a href="navigation/produit.html" target="_blank">Produit</a></button></li>
+                    <li><button type="button" class="topButton"><a href="navigation/contact.html" target="_blank">Contact</a></button></li>
+                </ul>
+            </nav>
+            <div class="mobileMenu">
+                <!-- Utilisation d'une checkbox -->
+                <input type="checkbox" id="hamburger">
+                <!-- Label de la checkbox -->
+                <label id="hamburger-logo" for="hamburger"><img class="mobileLogo" src="/menu.png"></label>
+                <!-- Le reste du menu -->
+                <nav class="mobileList">
+                    <a href="#">Page d'accueil</a>
+                    <a href="/navigation/produit.html">Produit</a>
+                    <a href="/navigation/service.html">Service</a>
+                    <a href="/navigation/contact.html">Contact</a>
+                </nav>
+            </div>
+            </a> 
+        </div>
+    </header>
+    <main>
+        <h1>Contact</h1>
+        <!-- La méthode GET ajoute les informations dans l'URL du site, il ne faut donc pas l'utiliser
+        pour les informations de connexion utilisateur. Toujours utiliser POST. -->
+        <!-- Le cycle de vie d'une appli web (e.g. quand on accède à un lien depuis Google. Le concept de
+        MVC (Vue/Controller/Model, ie. User input=>Actions et Opérations=>Data structure) -->
+        <!-- On fuit la méthode GET comme la peste pour les informations confidentielles. Ce n'est pas sécurisé. -->
+        <form method:"POST" action:"/URLDESITE">
+            <!-- La méthode suivante permet de méler la ligne du label et de l'input sans ajouter de for="prenom" au label. -->
+            <!-- Le double point ici n'est pas un opérateur, il s'affichera réellement dans le paragraphe. Ne pas le mettre dans le label permet de plus joliment séparer nos deux sections-->
+            <!-- name="variable" est une variable qui récupère les informations prenom, dans notre cas, id comporte prénom. -->
+            <fieldset>
+                <legend>Formulaire de contact :</legend>
+                <!-- On ne sépare les inputs dans des div si on veut pouvoir arranger le formulaire en inline-block plus tard  -->
+                <p>
+                    <!-- L'attribut maxlength se rapporte au nombre de charactères inputables, pas la taille de la boîte -->
+                    <label>Votre prénom</label> : <input size="15" maxlength="15" type="text" name="prenom" id="prenom" placeholder="Type your name here.">
+                    <label>Votre URL</label> : <input size="15" type="url" name="url" id="url" placeholder="Type your link here.">
+                    <label>Votre N° de Tél</label> : <input  size="15" type="tel" name="phone" id="phone" placeholder="Type your phone number here.">
+                    <label>Votre e-mail</label> : <input size="15" type="email" name="email" id="email" placeholder="Type your e-mail here.">
+                </p>
+                <p> Vous bénéficiez de :
+                    <label>l'ARE</label> : <input type="checkbox" name="man" id="man"> <br>
+                    <label>la pension retraité</label> : <input type="checkbox" name="woman" id="woman">
+                </p>
+                <p>
+                    <!-- La variable name ici est la même sur chaque ligne car elle changera selon l'id selectionné. -->
+                    <label>Moins de 15 ans</label> : <input type="radio" name="ageRange" value="moins15" id="moins15">
+                    <label>Moins de 25 ans</label> : <input type="radio" name="ageRange" value="moins25" id="moins25">
+                    <label>Moins de 60 ans</label> : <input type="radio" name="ageRange" value="moins60" id="moins60">
+                    <label>Plus de 25 ans</label> : <input type="radio" name="ageRange" value="plus60" id="plus60">
+                </p>
+                <p>
+                    <label>Votre nombre</label> : <input type="number" name="number" id="number" placeholder="Type a random number here.">
+                    <label>Votre choix</label> : <input type="range" name="range" id="range">
+                </p>
+                    <p>
+                    <label>Votre date de naissance</label> : <input type="date" name="date" id="date">
+                    <label>Heure</label> : <input type="time" name="hour" id="hour" >
+                    <label>Semaine</label> : <input type="week" name="week" id="week" placeholder="Type the week here.">
+                    <label>Mois</label> : <input type="month" name="month" id="month"  placeholder="Type the month here.">
+                    <label>Datetime</label> : <input type="datetime-local" name="datetime" id="datetime">
+                </p>
+                <p>
+                    <label>Searchbar</label> : <input type="search" name="search" id="search" placeholder="Search">
+                    <label>Boîte à texte</label> : <input type="text" name="textbox" id="textbox" placeholder="Type anything.">
+                    <!-- Atributs de input : value, pleceholder, max-length, size  -->
+                    <!-- OU si on ne fait qu'une ligne, ce sera <input type="text" name="prenom" id="prenom"> . La variable name doit "pointer" vers l'id prenom
+                    car le name va appeler la valeur tapée dans l'input grâce l'id prenom. -->
+                    <textarea type="text" name="commentary" id="commentary" placeholder="Type your comments here.">  </textarea>
+                </p>
+                <p>
+                    <!--  Ajouter un for="pays" au label permet de sélectionner notre champ d'input quand on survole le label. -->
+                    <label for="pays"> De quel pays venez-vous ?</label><br>
+                    <select name="pays" id="pays">
+                        <option value="Sénégal">Sénégal</option>
+                        <option value="UK">UK</option>
+                        <!-- Le selected (sélectionné par défaut) ne fontionnera pas si mon URL dans la barre d'adrese est parasitée de valeurs ajoutées par le GET -->
+                        <option value="France métropolitaine" selected>France métropolitaine</option>
+                        <option value="DROM">DROM</option>
+                    </select>
+                </p>
+                <p>
+                    <label>Une fois terminé, veuillez soumettre ce formulaire</label> : <input class=topButton type="submit" value="Envoyer" name="button" id="button">
+                    </p>
+            </fieldset>
+        </form>
+        </section>
+        <div class="fond2">
+            <div class="margin2">
+                <a href="#pageTop"><button id="bottomButton"><img class="upArrow" src="/upArrow.svg"></button></a>
+            </div>
+    </div>
+    </main>
+    <footer>
+        <div class="pageBottom">
+            <figure>
+                <img class="logo" src="/monimage.png" alt="Logo du site">
+            </figure>
+            <div class="navBottom">
+                <ul>
+                    <li><a>Informations juridiques</a></li>
+                    <li><a>RGU</a></li>
+                    <li><a>Nous contacter</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
