--- a/navigation/contact.html
+++ b/navigation/contact.html
@@ -20,9 +20,9 @@
                 <ul class="desktopList">
                     <!-- L'unité "em" est adaptatiave sur toutes les plateformes (mobile, desktop) comparée à la valeur "px"-->
                     <!-- On ne met pas de style="width:20em" à notre image, on le fera sur du CSS, pas sur du HTML-->
-                    <li><a href="#" target="_blank"><img class="logo" src="monimage.png" alt="Logo du site"></a></li>
+                    <li><a href="/index.html" target="_blank"><img class="logo" src="/monimage.png" alt="Logo du site"></a></li>
                     <!-- href="#" tout seul signifie que l'on est redirigé vers la même page-->
-                    <li><button type="button" class="topButton"><a href="#" target="_blank">Accueil</a></button></li>
+                    <li><button type="button" class="topButton"><a href="/index.html" target="_blank">Accueil</a></button></li>
                     <li><button type="button" class="topButton"><a href="navigation/service.html" target="_blank">Service</a></button></li>
                     <li><button type="button" class="topButton"><a href="navigation/produit.html" target="_blank">Produit</a></button></li>
                     <li><button type="button" class="topButton"><a href="navigation/contact.html" target="_blank">Contact</a></button></li>
@@ -41,7 +41,6 @@
                     <a href="/navigation/contact.html">Contact</a>
                 </nav>
             </div>
-            </a> 
         </div>
     </header>
     <main>
