--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- test  -->
+
 <!-- Au début, on tape point d'exclamation + entrée -->
 <!-- on peut générer plusieurs balises en écrivant <nomdebalise> * 3 et en supprimant les espaces-->
 <!DOCTYPE html>
